fix: aligning sigma links

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -52,6 +52,7 @@
   font-size: 40px;
   color: #44002b;
   text-decoration: none;
+  margin-right: 10px;
 }
 
 /* Media query for mobile devices */
